tests/snapshots/examples__19_auto_authors --help.snap
---
source: tests/examples.rs
expression: help
---
myapp 
Kevin K. <kbknapp@gmail.com>:Clap Maintainers
does awesome things

USAGE:
    19_auto_authors

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

