tests/snapshots/examples__21_aliases --help.snap
---
source: tests/examples.rs
expression: help
---
MyApp 

USAGE:
    21_aliases [SUBCOMMAND]

FLAGS:
    -h, --help       Prints help information
    -V, --version    Prints version information

SUBCOMMANDS:
    help    Prints this message or the help of the given subcommand(s)
    ls      Adds files to myapp

